# decisioning-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: finetune.yaml  models.yaml  qa_generation.yaml  rag.yaml  sources.yaml  webex_fetch.yaml
pipelines/: 01_ingest.sh  02_generate_qa.sh  03_finetune.sh  04_build_rag.sh  05_eval.sh  06_export_rag.sh  07_import_rag.sh
src/DecisioningAssistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/common/: __init__.py  io_utils.py  logging_utils.py  mlx_utils.py  prompts.py  schemas.py  text_utils.py  vector_utils.py  webex_utils.py
src/decisioning_assistant/: __init__.py  __main__.py  cli.py
src/ingestion/: fetch_webex_archive.py  ingest_pdfs.py  ingest_webex.py  normalize_docs.py
src/qa/: __init__.py  generate_qa.py  split_dataset.py  validate_qa.py
src/rag/: __init__.py  answer_selection.py  assistant_app.py  build_index.py  chat_local.py  eval_answering.py  eval_common.py  eval_retrieval.py  export_index.py  feedback.py  import_index.py  prompt_budget.py  query_planning.py  retrieve.py  sparse.py
src/training/: __init__.py  evaluate_model.py  fuse_adapter.py  run_lora.py
tests/: test_answer_selection.py  test_feedback.py  test_fetch_webex_archive.py  test_mlx_utils.py  test_query_planning.py  test_sparse_retrieval.py  test_text_utils.py
wiki/: Home.md  Overview.md  Technical-Details.md  Usage-and-Configuration.md
